Use ruby rewrites for package manipulation

--- a/lib/setup/templates/backups.erb
+++ b/lib/setup/templates/backups.erb
@@ -1,9 +1,8 @@
 require 'setup'
 
 class MyBackup < Setup::Package
-    name ''
+  package_name ''
 
-    def steps
-    end
+  def steps
+  end
 end
-
