More rubocop fixes

--- a/lib/setup/templates/package.erb
+++ b/lib/setup/templates/package.erb
@@ -1,4 +1,4 @@
-class <%= package_name.capitalize %>Package < Setup::Package
+class <%= package_name.capitalize %>Package < Setup::Tasks::Package
   package_name '<%= package_name.capitalize %>'
 
   def steps
